2008-10-14  Gautier Portet  <kassoulet gmail com>

	* src/soundconverter.py: Change status text when adding files, so
	  the user gets a clue of what is happening.
	  
2008-10-04  Gautier Portet  <kassoulet gmail com>

	* src/soundconverter.py: Fix crash at startup when more than one
	  encoding format is missing. (thanks Denis)
	  Release 1.4.1

2008-09-22  Gautier Portet  <kassoulet gmail com>

	* src/soundconverter.py: Fix problem with underscores in dest folder
	  name (thanks Robert).
	  Stop soundconverter trying to load all my disk at startup.
	  Maybe a change in getopt, anyway it's fixed...

2008-09-17  Gautier Portet  <kassoulet gmail com>

	* src/soundconverter.py: Fix old problem with unquoted filenames.
	When you passed filename in arguments, URI where not quoted when
	encoding to same folder, pffff...
	Release 1.4.0

2008-09-16  Gautier Portet  <kassoulet gmail com>

	* src/soundconverter.py: Add AAC quality setting.

2008-09-10  Gautier Portet  <kassoulet gmail com>

	* src/soundconverter.py: Add {Timestamp} filename template.
	  (thanks Mark)
	
2008-09-09  Gautier Portet  <kassoulet gmail com>

	* data/soundconverter.glade, src/soundconverter.py:
	  Added 320kbps to mp3 quality settings.
	  (thanks Michael)

2008-09-07  Gautier Portet  <kassoulet gmail com>

	* data/soundconverter.glade, src/soundconverter.py:
	  Added quality 10 to vorbis quality settings.
	  (thanks Juan Martin)

2008-09-03  Gautier Portet  <kassoulet gmail com>

	* data/soundconverter.glade, src/soundconverter.py:
	  Reverted useless flac quality setting.
	  Flac files were bigger than necessary because of
	  some default settings in gstreamer, causing both channels
	  to be encoded separately. I added the mid-side-stereo=true
	  option, and bumped encoding quality to max.

2008-08-31  Gautier Portet  <kassoulet gmail com>

	* data/soundconverter.glade, src/soundconverter.py:
	  Applied patch adding optional resampling from Francis.
	  Added flac experimental quality setting.